--- a/aquarius/index.html
+++ b/aquarius/index.html
@@ -1,213 +1,135 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Real world assets, mirrored on Stellar | Mirrasets</title>
-    <base href="" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
-    <link rel="canonical" href="/" />
-    <meta property="og:site_name" content="Mirrasets" />
-    <meta property="og:title" content="Real world assets, mirrored on Stellar" />
-    <meta property="og:url" content="https://mirrasets.com/" />
-    <meta property="og:type" content="website" />
-    <meta property="og:description" content="Improve trading on Stellar with fiat pegged mirrorcoins" />
-    <meta property="og:image" content="https://mirrasets.com/images/open_graph2.png" />
-    <meta property="og:image:width" content="1388" />
-    <meta property="og:image:height" content="694" />
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Mirrasets - Real world assets, mirrored on Stellar." />
-    <meta name="twitter:description" content="Improve trading on Stellar with fiat pegged mirrorcoins." />
-    <meta name="twitter:image" content="https://mirrasets.com/images/open_graph2.png" />
-    <meta name="twitter:url" content="https://mirrasets.com/" />
-    <meta itemprop="name" content="Mirrasets" />
-    <meta itemprop="url" content="/" />
-    <meta itemprop="description" content="Real world assets, mirrored on Stellar" />
-    <meta itemprop="thumbnailUrl" content="https://mirrasets.com/images/header_image_mobile.png" format=1000w />
-    <link rel="image_src" href="https://mirrasets.com/images/header_image_mobile.png" format=1000w />
-    <meta itemprop="image" content="https://mirrasets.com/images/header_image_mobile.png" format=1000w />
-    <meta name="description" content="Mirrasets - Real world assets, mirrored on Stellar." />
-    <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Aquarius Vote Booster Simulator</title>
+  <style>
+    body { font-family: sans-serif; margin: 10px; }
+    pre { background: #f9f9f9; padding: 10px; }
+    pre { white-space: pre-wrap; word-break: break-word; }
+    .controls { display: flex; flex-wrap: wrap; gap: 16px; margin-top: 20px; }
+    .control { display: flex; flex-direction: column; }
+    .control label { margin-bottom: 4px; font-size: 0.9em; }
+    .control input { padding: 4px; width: 100px; }
+    .table-container { overflow-x: auto; margin-top: 40px; }
+    table { border-collapse: collapse; width: 100%; min-width: 800px; }
+    th, td { border: 1px solid #ddd; padding: 8px; text-align: center; }
+    th { background-color: #f2f2f2; }
+    input[type=number] { width: 80px; }
+    @media (max-width: 600px) {
+      .controls { flex-direction: column; }
+      .control input { width: 80px; }
+      table { min-width: 600px; }
+    }
+  </style>
+</head>
+<body>
+  <h2>Aquarius Vote Booster Simulator</h2>
 
-    <!-- Stellar SDK & Modernizr -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/stellar-sdk/8.2.5/stellar-sdk.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
-
-    <!-- CSS -->
-    <link rel="stylesheet" href="https://mirrasets.com/styles/info.css" />
-  </head>
-
-  <body>
-    <div class="main-content" id="main-content">
-      <header class="page-header">
-        <a class="main-link" href="/">
-          <img src="/icons/sauk-logo.png" alt="Mirrasets Logo" />
-        </a>
-        <div class="menu-toggle">
-          <svg class="menu-icon" width="15" height="8" viewBox="0 0 15 8" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path d="M2 1H15" stroke="#4a4a4a" />
-            <path d="M15 7H0" stroke="#4a4a4a" />
-          </svg>
-          <svg class="close" width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path d="M11.6055 1L0.998867 11.6066" stroke="#4a4a4a" />
-            <path d="M11.6055 11.6064L0.998867 0.999844" stroke="#4a4a4a" />
-          </svg>
-        </div>
-        <div class="menu">
-          <div class="relative">
-            <nav>
-              <a href="https://mirrasets.com/" target="_self" class="font-bold">Home</a>
-              <div class="dropdown">
-                <a href="#" class="dropdown-toggle">Our Mirrored Assets &#9662;</a>
-                <div class="dropdown-menu">
-                  <a href="https://mirrasets.com/gbpc/" target="_self">GBPC</a>
-                  <a href="https://mirrasets.com/eurc/" target="_self">EURC</a>
-                  <a href="https://mirrasets.com/krwc/" target="_self">KRWC</a>
-                </div>
-              </div>
-              <a href="https://mirrasets.com/reserves/" target="_self" class="font-bold">Reserves</a>
-              <a href="https://vote.aqua.network/?base=GBPC:GDXF6SYWIQOKOZ7BACXHBFBLQZEIH25KOTTLWQK35GO3JKRNIFHHGBPC/" target="_blank" class="font-bold">AQUA Voting</a>
-              <a href="https://aqua.network/rewards/" target="_blank" class="font-bold">AQUA Rewards</a>
-            </nav>
-          </div>
-          <div class="social-links">
-            <a href="https://x.com/mirrasets" target="_blank">[X]</a>
-            <a href="https://discord.gg/DjBhVqmwup" target="_blank">[Discord]</a>
-            <a href="mailto:support@mirrasets.com">[Email]</a>
-          </div>
-        </div>
-      </header>
-      
-      <section class="main-block">
-        <!-- Main block content goes here -->
-      </section>
-
-      <section class="voting-block">
-        <main class="centered-block p-8">
-          <h1 class="text-2xl font-semibold mb-4">Aquarius Community Voting</h1>
-          <p class="mb-6">Adjust votes or bribes to explore community outcomes across top markets.</p>
-
-          <!-- Controls -->
-          <div class="controls flex flex-wrap gap-6 mb-6">
-            <div class="control">
-              <label for="divisor" class="block text-sm">Divisor</label>
-              <input type="number" id="divisor" value="5" min="1" class="border p-2 w-24" />
-            </div>
-            <div class="control">
-              <label for="rTotal" class="block text-sm">R_total (AQUA/day)</label>
-              <input type="number" id="rTotal" value="7000000" min="0" class="border p-2 w-32" />
-            </div>
-            <div class="control">
-              <label for="pCap" class="block text-sm">P_cap (%)</label>
-              <input type="number" id="pCap" value="10" min="0" max="100" class="border p-2 w-24" />
-            </div>
-            <div class="control">
-              <label for="rMarketCap" class="block text-sm">R_market_cap</label>
-              <input type="text" id="rMarketCap" disabled class="border p-2 w-32 bg-gray-100" />
-            </div>
-          </div>
-
-          <!-- Votes Table -->
-          <div class="table-container overflow-x-auto">
-            <table id="votesTable" class="w-full border-collapse">
-              <thead>
-                <tr class="bg-gray-100">
-                  <th class="p-2 border">Rank</th>
-                  <th class="p-2 border">Market</th>
-                  <th class="p-2 border">Bribes</th>
-                  <th class="p-2 border">Votes</th>
-                  <th class="p-2 border">Boost Value</th>
-                  <th class="p-2 border">Boosted Votes</th>
-                  <th class="p-2 border">Vote Share</th>
-                  <th class="p-2 border">Adj Share</th>
-                  <th class="p-2 border">Rewards</th>
-                </tr>
-              </thead>
-              <tbody></tbody>
-              <tfoot>
-                <tr class="font-bold">
-                  <td class="p-2 border">-</td>
-                  <td class="p-2 border">Total</td>
-                  <td id="totalBribes" class="p-2 border">0</td>
-                  <td id="totalVotes" class="p-2 border">0</td>
-                  <td id="totalBoostValue" class="p-2 border">0.00000</td>
-                  <td id="totalBoostedVotes" class="p-2 border">0</td>
-                  <td id="totalShare" class="p-2 border">0%</td>
-                  <td id="totalShareAdjust" class="p-2 border">0%</td>
-                  <td id="totalRewards" class="p-2 border">0</td>
-                </tr>
-              </tfoot>
-            </table>
-          </div>
-        </main>
-      </section>
-
-      <footer class="centered-block p-4 text-center text-sm">© 2025 mirrasets.com</footer>
+  <div class="controls">
+    <div class="control">
+      <label for="rTotal">R_total (AQUA/day)</label>
+      <input type="number" id="rTotal" value="7000000" min="0" />
     </div>
+    <div class="control">
+      <label for="pCap">P_cap (%)</label>
+      <input type="number" id="pCap" value="10" min="0" max="100" />
+    </div>
+    <div class="control">
+      <label for="rMarketCap">R_market_cap</label>
+      <input type="text" id="rMarketCap" value="700000" disabled />
+    </div>
+  </div>
 
-    <!-- Mobile menu script -->
-    <script src="https://mirrasets.com/scripts/mobile-menu.js"></script>
+  <div class="table-container" id="tableWrapper" style="display:none;">
+    <table id="votesTable">
+      <thead>
+        <tr>
+          <th>Market</th>
+          <th>Votes</th>
+          <th>Static Adj Votes</th>
+          <th>Bribes</th>
+          <th>Dynamic Boost</th>
+          <th>Dampened Adj Votes</th>
+          <th>Vote Share</th>
+          <th>Vote Share Adjust</th>
+          <th>AQUA Rewards</th>
+        </tr>
+      </thead>
+      <tbody></tbody>
+      <tfoot>
+        <tr>
+          <th>Total</th>
+          <th id="totalVotesFooterVotes">0</th>
+          <th id="totalStaticFooter">0</th>
+          <th></th>
+          <th></th>
+          <th id="totalDampFooter">0</th>
+          <th id="totalShareFooter">0%</th>
+          <th id="totalShareAdjustFooter">0%</th>
+          <th id="totalRewardsFooter">0</th>
+        </tr>
+      </tfoot>
+    </table>
+  </div>
 
-    <!-- Voting & Boost Logic -->
-    <script>
-      const TOTAL_REWARDS = 7000000;
-      const AQUA_ISSUER = 'GBNZILSTVQZ4R7IKQDGHYGY2QXL5QOFJYQMXPKWRRM5PAV7Y4M67AQUA';
-      const USDC_ISSUER = 'GA5ZSEJYB37JRC5AVCIA5MOP4RHTM335X2KGX3IHOJAPP5RE34K4KZVN';
-      function fmt(num, dec=2) { return num.toLocaleString(undefined, { minimumFractionDigits: dec, maximumFractionDigits: dec }); }
-      function parseNum(str) { return parseFloat(String(str).replace(/,/g,'').replace('%',''))||0; }
-      function debounce(fn, wait=600) { let t; return(...a)=>{ clearTimeout(t); t=setTimeout(()=>fn(...a), wait); }; }
-      function calcStatic(balances) {
-        const hasNative = balances.some(b=>b.asset_type==='native');
-        const non = balances.filter(b=>b.asset_type!=='native');
-        let boost=1;
-        if(non.length>=2) { non.forEach(b=>{ if(b.asset_code==='AQUA'&&b.asset_issuer===AQUA_ISSUER) boost+=0.5; if(b.asset_code==='USDC'&&b.asset_issuer===USDC_ISSUER) boost+=0.3; });
-        } else if(non.length===1) { const b=non[0]; if(b.asset_code==='AQUA'&&b.asset_issuer===AQUA_ISSUER) boost+=0.5; if(b.asset_code==='USDC'&&b.asset_issuer===USDC_ISSUER) boost+=0.3; if(hasNative) boost+=0.3; }
-        else if(hasNative) boost+=0.3; return boost;
-      }
-      function calcDynamic(br, maxB) {
-        const div=parseNum(document.getElementById('divisor').value);
-        const rt=parseNum(document.getElementById('rTotal').value);
-        const pc=parseNum(document.getElementById('pCap').value);
-        const rmc=rt*pc/100;
-        if(!div||!rmc) return 1+maxB;
-        return 1+maxB*Math.exp(-br/(rmc/div));
-      }
-      async function init() {
-        const resp=await fetch('https://voting-tracker.aqua.network/api/voting-snapshot/top-volume/?limit=200');
-        const {results:mkts}=await resp.json();
-        const balancesAll=await Promise.all(mkts.map(m=>fetch(`https://horizon.stellar.org/accounts/${m.market_key}`)
-          .then(r=>r.json()).then(js=>js.balances||[]).catch(()=>[])));
-        const tbody=document.querySelector('#votesTable tbody');
-        mkts.forEach((m,i)=>{
-          const bal=balancesAll[i]; const non=bal.filter(b=>b.asset_type!=='native');
-          const label=non.length>=2?`${non[0].asset_code}/${non[1].asset_code}`:non.length===1?`${non[0].asset_code}/XLM`:'XLM';
-          const votes=parseNum(m.votes_value);
-          const sb=calcStatic(bal);
-          const maxB=sb-1;
-          const tr=document.createElement('tr');
-          tr.innerHTML=`<td class="p-2 border">${i+1}</td><td class="p-2 border">${label}</td><td class="p-2 border"><input class="bribe w-full" type="number" value="0" min="0"></td><td class="p-2 border"><input class="vote w-full" type="number" value="${votes}" step="any"></td><td class="p-2 border">1.00000</td><td class="p-2 border">${fmt(votes*sb)}</td><td class="p-2 border">0.00000%</td><td class="p-2 border">0.00000%</td><td class="p-2 border">0.00</td>`;
-          tbody.appendChild(tr);
-          const brInp=tr.querySelector('.bribe'), voInp=tr.querySelector('.vote');
-          const boostCell=tr.cells[4], boostedCell=tr.cells[5];
-          brInp.addEventListener('input',debounce(update)); voInp.addEventListener('input',debounce(update));
-          function update() { const b=parseNum(brInp.value), v=parseNum(voInp.value); const dyn=calcDynamic(b,maxB); boostCell.textContent=dyn.toFixed(5); boostedCell.textContent=fmt(v*dyn); updateAll(); }
-        });
-        updateAll();
-      }
-      function updateAll() {
-        const rows=Array.from(document.querySelectorAll('#votesTable tbody tr'));
-        const boosts=rows.map(r=>parseNum(r.cells[5].textContent));
-        const totalBoosted=boosts.reduce((a,b)=>a+b,0)||1;
-        rows.forEach((r,i)=>{ r.cells[6].textContent=(boosts[i]/totalBoosted*100).toFixed(5)+'%'; r.cells[7].textContent=(boosts[i]/totalBoosted*100).toFixed(5)+'%'; r.cells[8].textContent=fmt(TOTAL_REWARDS*boosts[i]/totalBoosted); });
-        document.getElementById('totalBribes').textContent=fmt(rows.reduce((s,r)=>s+parseNum(r.querySelector('.bribe').value),0),0);
-        document.getElementById('totalVotes').textContent=fmt(rows.reduce((s,r)=>s+parseNum(r.querySelector('.vote').value),0),0);
-        document.getElementById('totalBoostedVotes').textContent=fmt(totalBoosted);
-        document.getElementById('totalShare').textContent=(totalBoosted/totalBoosted*100).toFixed(2)+'%';
-        document.getElementById('totalShareAdjust').textContent=document.getElementById('totalShare').textContent;
-        document.getElementById('totalRewards').textContent=fmt(TOTAL_REWARDS);
-      }
-      ['divisor','rTotal','pCap'].forEach(id=>document.getElementById(id).addEventListener('input',debounce(updateAll)));
-      window.addEventListener('DOMContentLoaded', init);
-    </script>
-  </body>
+  <div id="apiTotalsContainer" class="table-container" style="display:none;">
+    <h3>API Vote Totals</h3>
+    <table id="apiTotalsTable">
+      <tbody>
+        <tr><td>AQUA Votes</td><td id="apiAqua">–</td></tr>
+        <tr><td>upvoteICE Votes</td><td id="apiUpICE">–</td></tr>
+        <tr><td>downvoteICE Votes</td><td id="apiDownICE">–</td></tr>
+        <tr><th>Total Votes</th><th id="apiTotal">–</th></tr>
+      </tbody>
+    </table>
+  </div>
+
+  <script>
+    function fmt(num, dec=2) {
+      return num.toLocaleString(undefined, {
+        minimumFractionDigits: dec,
+        maximumFractionDigits: dec
+      });
+    }
+
+    function parseNum(str) {
+      return parseFloat(String(str).replace(/,/g,'').replace('%','')) || 0;
+    }
+
+    function debounce(fn, wait = 800) {
+      let timeout;
+      return (...args) => {
+        clearTimeout(timeout);
+        timeout = setTimeout(() => fn.apply(this, args), wait);
+      };
+    }
+
+    const divisorInput = document.getElementById('divisor');
+    const rTotalInput = document.getElementById('rTotal');
+    const pCapInput = document.getElementById('pCap');
+    const rMarketCapInput = document.getElementById('rMarketCap');
+
+    function updateMarketCap() {
+      let rt = parseNum(rTotalInput.value);
+      let pc = parseNum(pCapInput.value);
+      if (rt < 0) rt = 0;
+      if (pc < 0) pc = 0;
+      const rmc = rt * pc / 100;
+      rMarketCapInput.value = fmt(rmc,2);
+    }
+
+    const debouncedUpdate = debounce(() => {
+      updateMarketCap();
+      // TODO: update table rewards based on new limits
+    });
+
+    rTotalInput.addEventListener('input', debouncedUpdate);
+    pCapInput.addEventListener('input', debouncedUpdate);
+
+    // Initial population
+    updateMarketCap();
+  </script>
+</body>
 </html>
